grammar.ebnf
decl
    = pub;

pub
    = "pub", decl
    | decls;

decls
    = fn_decl
    | type_decl
    | import_decl;

import_decl
    = "import", import_path;

import_path
    = ident, { ".", ident };

type_decl
    = "type", ident, [ generic_params ], "=", type_body;

type_body
    = struct_decl
    | trait_decl
    | enum_decl
    | type;

trait_decl
    = "trait", "{", [ trait_method, { ";", trait_method }, [ ";" ] ], "}";

trait_method
    = "fn", fn_signature;

enum_decl
    = "enum", "{", [ enum_variant, { ",", enum_variant }, [ "," ] ], "}";

enum_variant
    = ident;

struct_decl
    = "struct", "{", [ struct_field, { ",", struct_field }, [ "," ] ], "}";

struct_field
    = ident, ":", type;

stmt
    = local
    | defer
    | return_stmt
    | break_stmt
    | "continue"
    | expr;

break_stmt
    = "break", [ expr ];

return_stmt
    = "return", [ expr ];

defer
    = "defer", expr;

local
    = ( "var"
    | "const" ), ident, [ ":", type ], [ "=", expr ];

block
    = "{", { ";" }, [ stmt, { ";", stmt }, [ ";" ] ], "}";

fn_decl
    = "fn", fn_signature, block;

fn_signature
    = ident, [ generic_params ], fn_params, [ type ];

fn_params
    = "(", [ self_param, [ ",", fn_param, { ",", fn_param }, [ "," ] ]
    | fn_param, { ",", fn_param }, [ "," ] ], ")";

self_param
    = "self", ":", type;

fn_param
    = ident, ":", type;

generic_params
    = "[", [ generic_param, { ",", generic_param }, [ "," ] ], "]";

generic_param
    = ident, [ ":", type ];

type
    = array, ptr, path;

array
    = { "[", usize, "]" };

ptr
    = { "*"
    | ( "*", "const" ) };

path
    = segment, { ".", segment };

segment
    = ident, [ generic_args ];

generic_args
    = "[", type, { ",", type }, [ "," ], "]";

expr
    = if_stmt
    | assign;

assign
    = logic_or, [ assign_kind, expr ];

assign_kind
    = "="
    | "+="
    | "-="
    | "*="
    | "/=";

logic_or
    = logic_and, { "||", logic_and };

logic_and
    = comparation, { "&&", comparation };

comparation
    = addition, [ ( "=="
    | "!="
    | "<="
    | ">="
    | "<"
    | ">" ), addition ];

addition
    = term, { ( "+"
    | "-" ), term };

term
    = unary, { ( "*"
    | "/" ), unary };

unary
    = ( "*"
    | "&"
    | "!"
    | "-" ), factor
    | factor;

factor
    = primary, { accessor };

primary
    = integer
    | float
    | string
    | bool
    | ( "(", expr, ")" )
    | block
    | loop_expr
    | struct_init
    | path;

loop_expr
    = "loop", block;

struct_init
    = path, "{", [ struct_init_field, { ",", struct_init_field }, [ "," ] ], "}";

struct_init_field
    = ".", ident, "=", expr;

accessor
    = call
    | field_access;

call
    = "(", [ expr, { ",", expr }, [ "," ] ], ")";

field_access
    = ".", segment;

if_stmt
    = "if", expr, block, [ "else", block ];
